resize layout areas to prevent overlap

--- a/css/layout.css
+++ b/css/layout.css
@@ -20,6 +20,7 @@ html, body {
     font-size: 1.5em;
     position: absolute;
     box-sizing: border-box;
+    transition: top 0.3s ease, left 0.3s ease, width 0.3s ease, height 0.3s ease;
 }
 
 .selector-cell {
@@ -30,7 +31,6 @@ html, body {
 .player-cell {
     background-color: red;
     z-index: 1;
-    transition: top 0.3s ease, left 0.3s ease;
 }
 
 .selector-cell.disabled {
